--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -390,6 +390,7 @@
 					segments.name = "segments 3";
 					segments.position.copy( mesh.position );
 					scene.add( mesh );
+					cameraControls.rigidObjects.push( mesh );
 				})();
 
 				(function(){
