--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -309,8 +309,8 @@
 
 		//	Viewport tab.
 
-			TabUI.Editor.role.classList.remove("active");
-			TabUI.Editor.tab.classList.remove("in","active");
+			TabUI.Texture.role.classList.remove("active");
+			TabUI.Texture.tab.classList.remove("in","active");
 			TabUI.Viewport.role.classList.add("active");
 			TabUI.Viewport.tab.classList.add("in","active");
 /*
