--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -302,6 +302,7 @@
 
 			console.log( {"object3DEditor": object3DEditor} ); // debug!
 			console.log( {"materialEditor": materialEditor} ); // debug!
+			console.log( {"textureEditor" : textureEditor}  ); // debug!
 
 		</script>
 
