--- a/engine/pre-alpha/18/index.html
+++ b/engine/pre-alpha/18/index.html
@@ -165,12 +165,6 @@
 		//	}
 		//	TextureEditor.prototype = Object.create(Object.prototype);
 
-			TextureEditor.prototype.exit = function(){
-
-				var editor = this;
-
-			};
-
 			TextureEditor.prototype.copy = function( json ){
 			//	param: texture json {object}
 
@@ -188,7 +182,7 @@
 							console.warn( "case:", key, "TODO!" );
 						break;
 
-					//	case "wrap":
+						case "wrap": // ???
 						case "center":
 						case "offset":
 						case "repeat":
@@ -227,20 +221,7 @@
 				var editor = this;
 
 			//	get new texture.
-				var texture = (function getTextureByEntityId( value ){
-
-					if ( !arguments.length ) 
-						var id = parseInt( texture_droplist.value );
-					else
-						var id = parseInt( value );
-
-					if ( id === NaN ) return; // important! // return undefined;
-
-					return texture_entities.find( function( texture ){
-						return texture.id === id;
-					});
-
-				})( value );
+				var texture = texture_entities.getTextureById( value );
 
 				if ( !texture ) {
 					editor.reset(); // reset editor.
@@ -335,6 +316,13 @@
 				};
 
 			})();
+
+
+			TextureEditor.prototype.exit = function(){
+
+				var editor = this;
+
+			};
 
 		</script>
 
