--- a/engine/pre-alpha/19 (texture tab)/index.html
+++ b/engine/pre-alpha/19 (texture tab)/index.html
@@ -392,7 +392,7 @@
 						this.text_input = text_input.value;
 						this.map_droplist = map_droplist.value;
 						this.key_droplist = key_droplist.value;
-						this.entity_droplist = entity_droplist.value;
+					//	this.entity_droplist = entity_droplist.value;
 						this.vector_droplist = vector_droplist.value;
 
 						switch ( key_droplist.value ){
@@ -537,6 +537,21 @@
 
 				})();
 
+				setTimeout(function(){
+				//	var entity_droplist = document.getElementById("texture-entities-droplist")
+					watch(entity_droplist.selectedOptions, function( key, action, value, oldValue ){
+						console.log("texture_entities id:", action, value);
+					});
+				});
+
+				setTimeout(function(){
+					entity_droplist.addEventListener( "change", function(){
+						callWatchers(this.selectedOptions, 0, "change", this.value );
+					});
+				});
+
+
+
 			//	Tab keyboard inputs.
 
 				(function(){
@@ -592,6 +607,7 @@
 				//	const decrease_v = document.getElementById("texture-value-decrease");
 				//	const value_input = document.getElementById("texture-value-input");
 				//	const key_droplist = document.getElementById("texture-key-droplist");
+				//	const entity_droplist = document.getElementById("texture-entities-droplist");
 
 					increase_v.addEventListener( "mousedown", onMouseDown );
 					decrease_v.addEventListener( "mousedown", onMouseDown );
@@ -778,6 +794,8 @@
 				//	const increase_y = document.getElementById("texture-vector-y-increase");
 				//	const decrease_x = document.getElementById("texture-vector-x-decrease");
 				//	const decrease_y = document.getElementById("texture-vector-y-decrease");
+				//	const vector_droplist = document.getElementById("texture-vector-droplist");
+				//	const entity_droplist = document.getElementById("texture-entities-droplist");
 
 					increase_x.addEventListener( "mousedown", onMouseDown );
 					decrease_x.addEventListener( "mousedown", onMouseDown );
